--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,3 +137,37 @@
 [data-radix-popper-content-wrapper] {
   z-index: 9999 !important;
 }
+
+/* @keyframes fade-in-up {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-up {
+  animation: fade-in-up 0.8s ease-out forwards;
+}
+
+.delay-200 {
+  animation-delay: 0.2s;
+} */
+
+/* Smooth scrolling */
+/* html {
+  scroll-behavior: smooth;
+} */
+
+/* Custom scrollbar */
+/* ::-webkit-scrollbar {
+  width: 8px;
+} */
+
+ @import "swiper/css";
+
+ @import "swiper/css/pagination";
